<resources>
    <!-- App UI strings -->
    <string name="app_name">Cytokinesis</string>
    <string name="go_back">Back</string>

    <!-- Network types -->
    <string name="network_wifi">WiFi</string>
    <string name="network_data">Mobile Data</string>

    <!-- Network states -->
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_lost">Lost</string>
    <string name="state_unavailable">Unavailable</string>
    <string name="state_disabled">Disabled</string>

    <!-- Displayable error strings -->
    <string name="error_no_ipv4">No IPv4 Address</string>
    <string name="error_no_ipv6">No IPv6 Address</string>
    <string name="error_not_set">&lt;Not Set&gt;</string>
    <string name="error_unknown_interface">Unknown Interface</string>
    <string name="error_permission_denied">Missing Permission</string> <!-- Copied in DataGeneration enum -->
    <string name="error_read_data_info">&lt;Error reading Mobile Data info&gt;</string>
    <string name="error_read_wifi_info">&lt;Error reading WiFi info&gt;</string>


    
    <!-- About fragment -->
    <string name="about_fragment_label">About Cytokinesis</string>
    <string name="about_body_text">
        This humble app provides two QuickSettings toggles resembling the "WiFi" and "Mobile Data" QuickSettings tiles removed after Android 11.
        "\n\n"<br/><br/>
        Source code is licensed under GPLv3:"\n"<br/>
        <a href="https://github.com/g-r-a-v-i-t-y-w-a-v-e/Cytokinesis.git">https://github.com/g-r-a-v-i-t-y-w-a-v-e/Cytokinesis.git</a>
        "\n\n"<br/><br/>
        Icons from <a href="https://fonts.google.com/icons">Material Icons</a> &amp; <a href="https://materialdesignicons.com">Material Design Icons</a>.
    </string>
    <string name="about_signature_text">
        Made with ☕ somewhere in Texas"\n\n"<br/><br/>
        g-r-a-v-i-t-y-w-a-v-e
    </string>

    <!-- Settings fragment -->
    <string name="settings_fragment_label">Cytokinesis Settings</string>
    <string name="icon_type_label">Icon Type</string>
    <string name="heading_label">Heading</string>
    <string name="subheading_label">Subheading</string>
    <!-- Wifi tile settings -->
    <string name="wifi_title_label">WiFi Tile</string>
    <!-- Data tile settings -->
    <string name="data_title_label">Mobile Data Tile</string>
    <!-- Permissions -->
    <string name="heading_permissions">Permissions</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="permission_granted">Permission granted</string>
    <string name="access_network_state">Access Network State</string>
    <string name="change_network_state">Change Network State</string>
    <string name="read_phone_state">Read Phone State</string>
    <string name="access_wifi_state">Access WiFi State</string>
    <string name="change_wifi_state">Change WiFi State</string>
    <string name="internet">Internet</string>

</resources>